--- a/slackCopy-ios/slackCopy-ios/Base.lproj/Main.storyboard
+++ b/slackCopy-ios/slackCopy-ios/Base.lproj/Main.storyboard
@@ -229,6 +229,9 @@
                                 <state key="normal" title="Don't have an account? Sign up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="registerBtnPressed:" destination="Cfv-sa-K8C" eventType="touchUpInside" id="dch-Iu-YSL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -247,10 +250,151 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hOc-iE-mhP"/>
                     </view>
+                    <connections>
+                        <segue destination="vXR-fL-Pl1" kind="show" identifier="toCreateAccount" id="feZ-xY-Ekv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Djg-Ge-55b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1908" y="-152.47376311844079"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="xoY-kR-CSS">
+            <objects>
+                <viewController id="vXR-fL-Pl1" customClass="CreateAccountVC" customModule="slackCopy_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Z1f-mP-QcD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cym-Hc-6SE">
+                                <rect key="frame" x="331" y="20" width="28" height="28"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closeBtnPressed:" destination="vXR-fL-Pl1" eventType="touchUpInside" id="blw-PQ-wRk"/>
+                                    <action selector="closeBtnPressed:" destination="Cfv-sa-K8C" eventType="touchUpInside" id="xy5-7B-Fse"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2xU-c8-Wgg">
+                                <rect key="frame" x="62.5" y="594" width="250" height="33"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="M5p-Bg-lm1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Create account">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="bMu-cE-ie5">
+                                <rect key="frame" x="62.5" y="123" width="250" height="86"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n0f-aM-otX">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="pLR-Iz-gO9"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Edo-b8-4Is">
+                                        <rect key="frame" x="0.0" y="34" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="JZN-hW-kct"/>
+                                            <constraint firstAttribute="height" constant="2" id="Uc8-wx-bfZ"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mJ6-X3-Ir5">
+                                        <rect key="frame" x="0.0" y="50" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="AvT-Pf-EHc"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MtF-o8-yHh">
+                                        <rect key="frame" x="0.0" y="84" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="aUg-TG-N6z"/>
+                                            <constraint firstAttribute="width" constant="250" id="mPL-Uk-Bv4"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YSP-E0-EZu">
+                                <rect key="frame" x="81.5" y="383" width="211" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="211" id="Nua-oA-4dO"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="211" id="UBB-ab-9gv"/>
+                                    <constraint firstAttribute="height" constant="27" id="eCd-gn-icn"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="27" id="wNc-BP-bHI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Generate background color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="registerBtnPressed:" destination="Cfv-sa-K8C" eventType="touchUpInside" id="Yjm-aC-ESZ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="coD-RL-2Wk">
+                                <rect key="frame" x="104.5" y="60" width="167" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="P8x-Z0-LSq">
+                                <rect key="frame" x="137" y="249" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="1m1-cL-H60"/>
+                                    <constraint firstAttribute="width" constant="100" id="g8H-b0-gBh"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igE-nx-maA">
+                                <rect key="frame" x="137" y="249" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="RoR-hW-R4A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Choose avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="registerBtnPressed:" destination="Cfv-sa-K8C" eventType="touchUpInside" id="WkI-TB-Kce"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YSP-E0-EZu" firstAttribute="top" secondItem="igE-nx-maA" secondAttribute="bottom" constant="4" id="0kw-mK-RFb"/>
+                            <constraint firstItem="igE-nx-maA" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="1DI-fR-IqL"/>
+                            <constraint firstItem="wqR-JZ-Mtb" firstAttribute="trailing" secondItem="Cym-Hc-6SE" secondAttribute="trailing" constant="16" id="2WB-vr-fTK"/>
+                            <constraint firstItem="coD-RL-2Wk" firstAttribute="top" secondItem="wqR-JZ-Mtb" secondAttribute="top" constant="40" id="7Vm-qP-7ua"/>
+                            <constraint firstItem="Cym-Hc-6SE" firstAttribute="top" secondItem="wqR-JZ-Mtb" secondAttribute="top" id="7fu-4g-t0q"/>
+                            <constraint firstItem="bMu-cE-ie5" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="IG0-Ad-2BY"/>
+                            <constraint firstItem="wqR-JZ-Mtb" firstAttribute="bottom" secondItem="2xU-c8-Wgg" secondAttribute="bottom" constant="40" id="IQa-tB-RlU"/>
+                            <constraint firstItem="2xU-c8-Wgg" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="U6W-bM-Qlf"/>
+                            <constraint firstItem="P8x-Z0-LSq" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="Vvz-Z8-VYT"/>
+                            <constraint firstItem="P8x-Z0-LSq" firstAttribute="top" secondItem="bMu-cE-ie5" secondAttribute="bottom" constant="40" id="WoA-Rn-zg9"/>
+                            <constraint firstItem="igE-nx-maA" firstAttribute="width" secondItem="P8x-Z0-LSq" secondAttribute="width" id="aCA-Z5-qDY"/>
+                            <constraint firstItem="igE-nx-maA" firstAttribute="top" secondItem="P8x-Z0-LSq" secondAttribute="top" id="iqr-cZ-NYa"/>
+                            <constraint firstItem="YSP-E0-EZu" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="jvP-PZ-dkh"/>
+                            <constraint firstItem="coD-RL-2Wk" firstAttribute="centerX" secondItem="Z1f-mP-QcD" secondAttribute="centerX" id="pJ6-vO-F43"/>
+                            <constraint firstItem="bMu-cE-ie5" firstAttribute="top" secondItem="coD-RL-2Wk" secondAttribute="bottom" constant="40" id="ylO-tT-wv0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wqR-JZ-Mtb"/>
+                    </view>
+                    <connections>
+                        <segue destination="GQV-TE-hdg" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="Ekw-be-CDE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IF4-PO-fgl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="GQV-TE-hdg" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2924" y="-152.47376311844079"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="gQo-cx-k56">
@@ -309,6 +453,7 @@
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
